test/integration/bad/new/mystery43.stan
transformed data { 1.0 ? T : 1.0 while